--- a/index.html
+++ b/index.html
@@ -11,33 +11,32 @@
         .hidden { display: none !important; }
         input { width: 100%; padding: 12px; margin: 8px 0; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; }
         button { width: 100%; padding: 12px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; margin-bottom: 10px; transition: 0.3s; }
-        button:active { transform: scale(0.98); }
         .btn-main { background: #1877f2; color: white; width: 100%; }
         .btn-save { background: #42b72a; color: white; width: 100%; }
         .btn-cancel { background: #f02849; color: white; width: 100%; }
-        .btn-delete { background: #ff4d4d; color: white; padding: 5px 10px; border-radius: 5px; font-size: 12px; float: right; cursor: pointer; border: none; }
-        .link-auth { color: #1877f2; cursor: pointer; text-decoration: underline; font-size: 14px; text-align: center; display: block; margin-top: 15px; font-weight: 500; }
+        .btn-wa { background: #25D366; color: white; padding: 10px; font-size: 14px; text-decoration: none; border-radius: 8px; display: inline-flex; align-items: center; justify-content: center; width: 100%; margin-top: 10px; font-weight: bold; }
+        .btn-delete { background: #ff4d4d; color: white; padding: 5px 10px; border-radius: 5px; font-size: 12px; float: right; border: none; cursor: pointer; }
+        .link-auth { color: #1877f2; cursor: pointer; text-decoration: underline; font-size: 14px; text-align: center; display: block; margin-top: 15px; }
         .filter-tab { display: flex; background: #eee; border-radius: 10px; margin-bottom: 15px; padding: 5px; position: relative; }
-        .tab-item { flex: 1; text-align: center; padding: 10px; font-size: 14px; font-weight: bold; cursor: pointer; z-index: 2; transition: 0.3s; color: #555; }
+        .tab-item { flex: 1; text-align: center; padding: 10px; font-size: 14px; font-weight: bold; cursor: pointer; z-index: 2; color: #555; }
         .tab-item.active { color: #1877f2; }
-        .tab-bg { position: absolute; width: 50%; height: calc(100% - 10px); background: white; border-radius: 8px; transition: 0.3s ease-in-out; box-shadow: 0 2px 5px rgba(0,0,0,0.1); z-index: 1; }
+        .tab-bg { position: absolute; width: 50%; height: calc(100% - 10px); background: white; border-radius: 8px; transition: 0.3s ease; z-index: 1; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
         .slide-right { transform: translateX(100%); }
-        .user-bar { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #eee; margin-bottom: 20px; padding-bottom: 10px; }
-        .card { background: white; border: 1px solid #ddd; padding: 15px; margin-top: 15px; border-radius: 10px; position: relative; }
-        .card img { width: 100%; border-radius: 8px; margin-bottom: 10px; display: block; }
+        .card { background: white; border: 1px solid #ddd; padding: 15px; margin-top: 15px; border-radius: 10px; }
+        .card img { width: 100%; border-radius: 8px; margin-bottom: 10px; }
+        .info-row { display: flex; align-items: center; margin: 4px 0; font-size: 14px; }
+        .info-row b { color: #333; margin-right: 5px; }
         .pass-container { position: relative; width: 100%; }
         .toggle-pass { position: absolute; right: 10px; top: 18px; cursor: pointer; font-size: 11px; color: #1877f2; font-weight: bold; }
         .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); display: flex; justify-content: center; align-items: center; z-index: 9999; }
         .modal-box { background: white; padding: 20px; border-radius: 15px; width: 85%; max-width: 320px; text-align: center; }
-        .btn-modal-flex { display: flex; gap: 10px; margin-top: 15px; width: 100%; }
-        .btn-modal-flex button { flex: 1; margin-bottom: 0; padding: 12px 5px; font-size: 14px; }
     </style>
 </head>
 <body>
     <div class="container">
         <div id="login-section">
             <h2 style="text-align: center; color: #1877f2;">🔍 Penemu</h2>
-            <input type="text" id="login-nick" placeholder="Nickname">
+            <input type="text" id="login-id" placeholder="Nickname atau Gmail">
             <div class="pass-container">
                 <input type="password" id="login-pass" placeholder="Password">
                 <span class="toggle-pass" id="toggle-l">LIHAT</span>
@@ -49,7 +48,7 @@
 
         <div id="register-section" class="hidden">
             <h2 style="text-align: center;">Daftar Akun</h2>
-            <input type="text" id="reg-nick" placeholder="Nickname Baru">
+            <input type="text" id="reg-nick" placeholder="Nickname">
             <input type="email" id="reg-email" placeholder="Alamat Gmail">
             <input type="number" id="reg-wa" placeholder="Nomor WhatsApp (Contoh: 0812...)">
             <div class="pass-container">
@@ -60,7 +59,7 @@
                 <input type="password" id="reg-confirm" placeholder="Konfirmasi Password">
                 <span class="toggle-pass" id="toggle-r2">LIHAT</span>
             </div>
-            <button id="btn-register-action" class="btn-main" style="background: #42b72a;">Daftar</button>
+            <button id="btn-register-action" class="btn-save">Daftar</button>
             <p class="link-auth" id="go-to-login">Kembali ke Login</p>
         </div>
 
@@ -71,8 +70,8 @@
                 <button id="btn-send-otp" class="btn-main">Kirim Kode OTP</button>
             </div>
             <div id="forgot-step-2" class="hidden">
-                <p style="font-size: 12px; color: green; text-align: center;">Kode OTP telah dikirim ke Gmail.</p>
-                <input type="number" id="input-otp" placeholder="Masukkan 6 Digit OTP">
+                <p style="font-size: 12px; color: green; text-align: center;">OTP dikirim ke Gmail Anda.</p>
+                <input type="number" id="input-otp" placeholder="6 Digit OTP">
                 <input type="password" id="new-pass" placeholder="Password Baru">
                 <button id="btn-reset-pass" class="btn-save">Reset Password</button>
             </div>
@@ -80,9 +79,9 @@
         </div>
 
         <div id="main-app" class="hidden">
-            <div class="user-bar">
+            <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px; border-bottom:1px solid #eee; padding-bottom:10px;">
                 <div>Halo, <b id="display-nick">...</b></div>
-                <button id="btn-logout" style="width: auto; padding: 5px 12px; margin: 0; background: #eee;">Logout</button>
+                <button id="btn-logout" style="width:auto; padding:5px 12px; margin:0; background:#eee;">Logout</button>
             </div>
             <div id="view-list">
                 <div class="filter-tab">
@@ -97,7 +96,6 @@
                 <h3>Detail Laporan</h3>
                 <input type="text" id="nama-barang" placeholder="Nama Barang">
                 <input type="text" id="lokasi-barang" placeholder="Lokasi Ketemu">
-                <label style="font-size: 11px; color: gray;">Foto (Maks 5MB):</label>
                 <input type="file" id="foto-barang" accept="image/*">
                 <button id="btn-posting" class="btn-save">Posting Sekarang</button>
                 <button id="btn-batal" class="btn-cancel">Batal</button>
@@ -107,9 +105,8 @@
 
     <div id="custom-alert" class="modal-overlay hidden">
         <div class="modal-box">
-            <h3 id="modal-title">Penemu</h3>
             <p id="modal-msg"></p>
-            <div id="modal-actions" class="btn-modal-flex"></div>
+            <button onclick="document.getElementById('custom-alert').classList.add('hidden')" class="btn-main">OK</button>
         </div>
     </div>
 
