--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         button { width: 100%; padding: 12px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; margin-bottom: 10px; transition: 0.2s; }
         .btn-main { background: #1877f2; color: white; }
         .btn-save { background: #42b72a; color: white; }
+        .btn-cancel { background: #f02849; color: white; }
         .link-style { color: #1877f2; text-decoration: underline; cursor: pointer; font-size: 14px; text-align: center; display: block; margin-top: 15px; }
         .link-forgot { color: #888; font-size: 13px; text-align: center; display: block; margin-top: 5px; cursor: pointer; }
         .search-container { position: relative; margin-bottom: 10px; }
@@ -49,17 +50,25 @@
                 <div>Halo, <b id="display-nick">...</b></div>
                 <button id="btn-logout" style="width:auto; padding:5px 10px; background:#eee; color:#333;">Logout</button>
             </div>
+            
             <div id="view-list">
-                <div class="search-container">
-                    <input type="text" id="search-input" placeholder="Cari nama barang...">
-                </div>
+                <div class="search-container"><input type="text" id="search-input" placeholder="Cari nama barang..."></div>
                 <div class="filter-tab">
                     <div id="tab-all" class="tab-item active">Semua Laporan</div>
                     <div id="tab-mine" class="tab-item">Laporan Saya</div>
                     <div id="tab-bg" class="tab-bg"></div>
                 </div>
-                <button class="btn-main">+ Lapor Barang</button>
+                <button id="btn-buka-form" class="btn-main">+ Lapor Barang</button>
                 <div id="item-list"></div>
+            </div>
+
+            <div id="view-form" class="hidden">
+                <h3>Detail Laporan</h3>
+                <input type="text" id="nama-barang" placeholder="Nama Barang">
+                <input type="text" id="lokasi-barang" placeholder="Lokasi">
+                <textarea id="deskripsi-barang" rows="3" placeholder="Deskripsi"></textarea>
+                <button id="btn-posting" class="btn-save">Posting Sekarang</button>
+                <button id="btn-batal" class="btn-cancel">Batal</button>
             </div>
         </div>
     </div>
@@ -73,7 +82,6 @@
                 <button id="btn-send-otp" class="btn-main">Kirim Kode OTP</button>
             </div>
             <div id="step-otp" class="hidden">
-                <p style="font-size: 13px;">Gunakan kode OTP dari email anda.</p>
                 <input type="number" id="otp-input" placeholder="6 Digit Kode">
                 <input type="password" id="new-pass-input" placeholder="Password Baru">
                 <button id="btn-verify-reset" class="btn-save">Update Password</button>
