--- a/index.html
+++ b/index.html
@@ -24,12 +24,8 @@
         .btn-cancel { background: #f02849; color: white; }
         .link-style { color: #1877f2; text-decoration: underline; cursor: pointer; font-size: 14px; text-align: center; display: block; margin-top: 15px; }
         .link-forgot { color: #888; font-size: 13px; text-align: center; display: block; margin-top: 5px; cursor: pointer; }
-        .search-container { position: relative; margin-bottom: 10px; }
-        #search-input { padding-left: 35px; border-radius: 20px; background: var(--search-bg); border: none; height: 45px; width: 100%; }
-        .filter-tab { display: flex; background: var(--tab-bg); border-radius: 10px; margin-bottom: 15px; padding: 5px; position: relative; }
-        .tab-item { flex: 1; text-align: center; padding: 10px; font-size: 14px; font-weight: bold; cursor: pointer; z-index: 2; color: var(--text-sub); }
-        .tab-item.active { color: #1877f2; }
-        .tab-bg { position: absolute; width: 50%; height: calc(100% - 10px); background: var(--bg-container); border-radius: 8px; transition: 0.3s; z-index: 1; }
+        .card { background: var(--card-bg); border: 1px solid var(--border-color); padding: 15px; margin-top: 15px; border-radius: 10px; }
+        .card img { width: 100%; border-radius: 8px; margin-bottom: 10px; }
         .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); display: flex; justify-content: center; align-items: center; z-index: 9999; }
         .modal-box { background: var(--bg-container); padding: 25px; border-radius: 15px; width: 85%; max-width: 320px; text-align: center; }
     </style>
@@ -52,12 +48,6 @@
             </div>
             
             <div id="view-list">
-                <div class="search-container"><input type="text" id="search-input" placeholder="Cari nama barang..."></div>
-                <div class="filter-tab">
-                    <div id="tab-all" class="tab-item active">Semua Laporan</div>
-                    <div id="tab-mine" class="tab-item">Laporan Saya</div>
-                    <div id="tab-bg" class="tab-bg"></div>
-                </div>
                 <button id="btn-buka-form" class="btn-main">+ Lapor Barang</button>
                 <div id="item-list"></div>
             </div>
@@ -67,6 +57,7 @@
                 <input type="text" id="nama-barang" placeholder="Nama Barang">
                 <input type="text" id="lokasi-barang" placeholder="Lokasi">
                 <textarea id="deskripsi-barang" rows="3" placeholder="Deskripsi"></textarea>
+                <input type="file" id="foto-barang" accept="image/*">
                 <button id="btn-posting" class="btn-save">Posting Sekarang</button>
                 <button id="btn-batal" class="btn-cancel">Batal</button>
             </div>
@@ -77,7 +68,6 @@
         <div class="modal-box">
             <h3>Reset Password</h3>
             <div id="step-email">
-                <p style="font-size: 13px;">Masukkan Gmail anda untuk menerima kode OTP.</p>
                 <input type="email" id="reset-email-input" placeholder="alamat@gmail.com">
                 <button id="btn-send-otp" class="btn-main">Kirim Kode OTP</button>
             </div>
@@ -86,7 +76,7 @@
                 <input type="password" id="new-pass-input" placeholder="Password Baru">
                 <button id="btn-verify-reset" class="btn-save">Update Password</button>
             </div>
-            <p onclick="document.getElementById('reset-modal').classList.add('hidden')" class="link-style" style="text-decoration:none;">Batal</p>
+            <p onclick="document.getElementById('reset-modal').classList.add('hidden')" class="link-style">Batal</p>
         </div>
     </div>
 
