--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         .btn-cancel { background: #f02849; color: white; }
         .link-style { color: #1877f2; text-decoration: underline; cursor: pointer; font-size: 14px; text-align: center; display: block; margin-top: 15px; }
         .link-forgot { color: #888; font-size: 13px; text-align: center; display: block; margin-top: 5px; cursor: pointer; }
-        .card { background: var(--card-bg); border: 1px solid var(--border-color); padding: 15px; margin-top: 15px; border-radius: 10px; }
+        .card { background: var(--card-bg); border: 1px solid var(--border-color); padding: 15px; margin-top: 15px; border-radius: 10px; position: relative; }
         .card img { width: 100%; border-radius: 8px; margin-bottom: 10px; }
+        .btn-del { background: #ff4d4d; color: white; padding: 5px; font-size: 12px; margin-top: 10px; width: auto; }
+        .wa-link { color: #25d366; font-weight: bold; text-decoration: none; }
         .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); display: flex; justify-content: center; align-items: center; z-index: 9999; }
         .modal-box { background: var(--bg-container); padding: 25px; border-radius: 15px; width: 85%; max-width: 320px; text-align: center; }
     </style>
@@ -48,6 +50,7 @@
             </div>
             
             <div id="view-list">
+                <input type="text" id="search-input" placeholder="🔍 Cari nama barang..." style="border-radius: 20px; background: var(--search-bg);">
                 <button id="btn-buka-form" class="btn-main">+ Lapor Barang</button>
                 <div id="item-list"></div>
             </div>
@@ -57,6 +60,7 @@
                 <input type="text" id="nama-barang" placeholder="Nama Barang">
                 <input type="text" id="lokasi-barang" placeholder="Lokasi">
                 <textarea id="deskripsi-barang" rows="3" placeholder="Deskripsi"></textarea>
+                <input type="number" id="nomor-wa" placeholder="Nomor WhatsApp (Contoh: 0812...)">
                 <input type="file" id="foto-barang" accept="image/*">
                 <button id="btn-posting" class="btn-save">Posting Sekarang</button>
                 <button id="btn-batal" class="btn-cancel">Batal</button>
@@ -79,7 +83,6 @@
             <p onclick="document.getElementById('reset-modal').classList.add('hidden')" class="link-style">Batal</p>
         </div>
     </div>
-
     <div id="custom-alert" class="modal-overlay hidden">
         <div class="modal-box"><p id="modal-msg"></p><button onclick="document.getElementById('custom-alert').classList.add('hidden')" class="btn-main">OK</button></div>
     </div>
