--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
         .card { background: var(--card-bg); border: 1px solid var(--border-color); padding: 15px; margin-top: 15px; border-radius: 10px; position: relative; }
         .card img { width: 100%; border-radius: 8px; margin-bottom: 10px; }
         .btn-del { background: #ff4d4d; color: white; padding: 5px; font-size: 12px; margin-top: 10px; width: auto; }
-        .wa-link { color: #25d366; font-weight: bold; text-decoration: none; }
+        /* Style Link Nomor WA Biru Bergaris Bawah */
+        .wa-link { color: #0000FF !important; text-decoration: underline !important; font-weight: bold; }
         .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); display: flex; justify-content: center; align-items: center; z-index: 9999; }
         .modal-box { background: var(--bg-container); padding: 25px; border-radius: 15px; width: 85%; max-width: 320px; text-align: center; }
+        .btn-confirm-flex { display: flex; gap: 10px; margin-top: 15px; }
     </style>
 </head>
 <body>
@@ -83,8 +85,15 @@
             <p onclick="document.getElementById('reset-modal').classList.add('hidden')" class="link-style">Batal</p>
         </div>
     </div>
+
     <div id="custom-alert" class="modal-overlay hidden">
-        <div class="modal-box"><p id="modal-msg"></p><button onclick="document.getElementById('custom-alert').classList.add('hidden')" class="btn-main">OK</button></div>
+        <div class="modal-box">
+            <p id="modal-msg"></p>
+            <div id="alert-actions" class="btn-confirm-flex">
+                <button id="alert-ok" class="btn-main">OK</button>
+                <button id="alert-cancel" class="btn-cancel hidden">Batal</button>
+            </div>
+        </div>
     </div>
 
     <script type="module" src="script.js"></script>
