--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         .card { background: var(--card-bg); border: 1px solid var(--border-color); padding: 15px; margin-top: 15px; border-radius: 10px; position: relative; }
         .card img { width: 100%; border-radius: 8px; margin-bottom: 10px; }
         .btn-del { background: #ff4d4d; color: white; padding: 5px; font-size: 12px; margin-top: 10px; width: auto; }
-        /* Style Link Nomor WA Biru Bergaris Bawah */
         .wa-link { color: #0000FF !important; text-decoration: underline !important; font-weight: bold; }
         .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); display: flex; justify-content: center; align-items: center; z-index: 9999; }
         .modal-box { background: var(--bg-container); padding: 25px; border-radius: 15px; width: 85%; max-width: 320px; text-align: center; }
@@ -42,7 +41,18 @@
             <input type="password" id="login-pass" placeholder="Password">
             <button id="btn-login-action" class="btn-main">Login</button>
             <p id="btn-forgot-password" class="link-forgot">Lupa Password?</p>
-            <p class="link-style" onclick="tampilPesan('Fitur Daftar Akun Baru segera hadir!')">Daftar Akun Baru</p>
+            <p class="link-style" id="go-to-register">Daftar Akun Baru</p>
+        </div>
+
+        <div id="register-section" class="hidden">
+            <h2 style="text-align: center; color: #42b72a;">📝 Buat Akun</h2>
+            <input type="text" id="reg-nick" placeholder="Nickname">
+            <input type="email" id="reg-email" placeholder="Alamat Gmail">
+            <input type="number" id="reg-phone" placeholder="Nomor WhatsApp">
+            <input type="password" id="reg-pass" placeholder="Password">
+            <input type="password" id="reg-confirm-pass" placeholder="Konfirmasi Password">
+            <button id="btn-register-action" class="btn-save">Daftar Sekarang</button>
+            <p class="link-style" id="go-to-login">Kembali ke Login</p>
         </div>
 
         <div id="main-app" class="hidden">
@@ -62,7 +72,6 @@
                 <input type="text" id="nama-barang" placeholder="Nama Barang">
                 <input type="text" id="lokasi-barang" placeholder="Lokasi">
                 <textarea id="deskripsi-barang" rows="3" placeholder="Deskripsi"></textarea>
-                <input type="number" id="nomor-wa" placeholder="Nomor WhatsApp (Contoh: 0812...)">
                 <input type="file" id="foto-barang" accept="image/*">
                 <button id="btn-posting" class="btn-save">Posting Sekarang</button>
                 <button id="btn-batal" class="btn-cancel">Batal</button>
